--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">react_navigation_v5_exercise</string>
+    <string name="app_name">RN App</string>
 </resources>
