--- a/src/I18n/en.json
+++ b/src/I18n/en.json
@@ -12,5 +12,7 @@
   "Search":"Search",
   "Saved successfully!":"Saved successfully!",
   "Saved already!":"Saved already!",
-  "Something went wrong!":"Something went wrong!"
+  "Something went wrong!":"Something went wrong!",
+  "Source:":"Source:",
+  "Published at:":"Published at:"
 }
