--- a/src/I18n/zh-hk.json
+++ b/src/I18n/zh-hk.json
@@ -12,5 +12,7 @@
   "Search":"搜尋",
   "Saved successfully!":"儲存成功！",
   "Saved already!":"已儲存！",
-  "Something went wrong!":"發生問題！"
+  "Something went wrong!":"發生問題！",
+  "Source:":"來源：",
+  "Published at:":"發表於："
 }
