add tda account summary

--- a/src/I18n/zh-hk.json
+++ b/src/I18n/zh-hk.json
@@ -3,16 +3,30 @@
   "Dark Mode": "黑暗模式",
   "Setting": "設定",
   "en": "英文",
-  "zh-hk":"繁體中文",
-  "Last updated at:":"最後更新時間：",
-  "Save":"儲存",
-  "Stock":"股票",
-  "Stocks":"股票列表",
-  "News":"新聞",
-  "Search":"搜尋",
-  "Saved successfully!":"儲存成功！",
-  "Saved already!":"已儲存！",
-  "Something went wrong!":"發生問題！",
-  "Source:":"來源：",
-  "Published at:":"發表於："
+  "zh-hk": "繁體中文",
+  "Last updated at:": "最後更新時間：",
+  "Save": "儲存",
+  "Stock": "股票",
+  "Stocks": "股票列表",
+  "News": "新聞",
+  "Search": "搜尋",
+  "Saved successfully!": "儲存成功！",
+  "Saved already!": "已儲存！",
+  "Something went wrong!": "發生問題！",
+  "Source:": "來源：",
+  "Published at:": "發表於：",
+  "cashBalance": "現金餘額",
+  "longMarketValue": "買入股票市值",
+  "shortMarketValue": "賣出股票市值",
+  "moneyMarketFund": "貨幣市場餘額",
+  "liquidationValue": "淨清倉價值",
+  "cashAvailableForTrading": "可用於交易的現金",
+  "cashAvailableForWithdrawal": "可提取的現金",
+  "CASH": "現金",
+  "MARGIN": "保證金",
+  "You must login first": "請先登入",
+  "Portfolio": "投資組合",
+  "Login TD Ameritrade": "登入TD Ameritrade",
+  "Summary": "總結",
+  "Login successful":"登入成功"
 }
