--- a/src/I18n/en.json
+++ b/src/I18n/en.json
@@ -1,18 +1,32 @@
 {
-  "Languages":"Languages",
-  "Dark Mode":"Dark Mode",
-  "Setting":"Setting",
-  "en":"English",
-  "zh-hk":"Traditional Chinese",
-  "Last updated at:":"Last updated at:",
-  "Save":"Save",
-  "Stock":"Stock",
-  "Stocks":"Stocks",
-  "News":"News",
-  "Search":"Search",
-  "Saved successfully!":"Saved successfully!",
-  "Saved already!":"Saved already!",
-  "Something went wrong!":"Something went wrong!",
-  "Source:":"Source:",
-  "Published at:":"Published at:"
+  "Languages": "Languages",
+  "Dark Mode": "Dark Mode",
+  "Setting": "Setting",
+  "en": "English",
+  "zh-hk": "Traditional Chinese",
+  "Last updated at:": "Last updated at:",
+  "Save": "Save",
+  "Stock": "Stock",
+  "Stocks": "Stocks",
+  "News": "News",
+  "Search": "Search",
+  "Saved successfully!": "Saved successfully!",
+  "Saved already!": "Saved already!",
+  "Something went wrong!": "Something went wrong!",
+  "Source:": "Source:",
+  "Published at:": "Published at:",
+  "cashBalance": "Cash Balance",
+  "longMarketValue": "Long Market Value",
+  "shortMarketValue": "Short Market Value",
+  "moneyMarketFund": "Money Market Fund",
+  "liquidationValue": "Net Liquidation Value",
+  "cashAvailableForTrading": "Cash Available For Trading",
+  "cashAvailableForWithdrawal": "Cash Available For Withdrawal",
+  "CASH": "Cash",
+  "MARGIN": "Margin",
+  "You must login first": "You must login first",
+  "Portfolio": "Portfolio",
+  "Login TD Ameritrade": "Login TD Ameritrade",
+  "Summary": "Summary",
+  "Login successful":"Login successful"
 }
