update webview ui

--- a/src/I18n/en.json
+++ b/src/I18n/en.json
@@ -28,5 +28,10 @@
   "Portfolio": "Portfolio",
   "Login TD Ameritrade": "Login TD Ameritrade",
   "Summary": "Summary",
-  "Login successful":"Login successful"
+  "Login successful": "Login successful",
+  "No any symbol saved": "No any symbol saved",
+  "Click ": "Click",
+  "here": "here",
+  " to search": " to search",
+  "Clear list": "Clear list"
 }
