--- a/src/I18n/zh-hk.json
+++ b/src/I18n/zh-hk.json
@@ -28,5 +28,10 @@
   "Portfolio": "投資組合",
   "Login TD Ameritrade": "登入TD Ameritrade",
   "Summary": "總結",
-  "Login successful":"登入成功"
+  "Login successful": "登入成功",
+  "No any symbol saved": "沒有儲存的股票",
+  "Click ": "按",
+  "here": "此",
+  " to search": "搜尋",
+  "Clear list": "清除列表"
 }
