- update config - code update

--- a/src/I18n/en.json
+++ b/src/I18n/en.json
@@ -4,6 +4,8 @@
   "Setting": "Setting",
   "en": "English",
   "zh-hk": "Traditional Chinese",
+  "yue": "Traditional Chinese",
+  "zh": "Traditional Chinese",
   "Last updated at:": "Last updated at:",
   "Save": "Save",
   "Stock": "Stock",
