--- a/src/I18n/zh-hk.json
+++ b/src/I18n/zh-hk.json
@@ -4,6 +4,8 @@
   "Setting": "設定",
   "en": "英文",
   "zh-hk": "繁體中文",
+  "yue": "繁體中文",
+  "zh": "繁體中文",
   "Last updated at:": "最後更新時間：",
   "Save": "儲存",
   "Stock": "股票",
