update tab view

--- a/src/I18n/en.json
+++ b/src/I18n/en.json
@@ -49,5 +49,8 @@
   "GB": "UK",
   "Country": "Country",
   "Done": "Done",
-  "Close": "Close"
+  "Close": "Close",
+  "Remove":"Remove",
+  "CandleStick Chart":"CandleStick Chart",
+  "Line Chart":"Line Chart"
 }
